<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UbiLearn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- [h] == header, [t] == text -->
    <string-array name="menu_options">
        <item>[h]UbiLearn</item>
        <item>[t]Hjem</item>
        <item>[h]Trening</item>
        <item>[t]Opplæring</item>
        <item>[t]Praksis</item>
        <item>[h]Lesestoff</item>
        <item>[t]Handbook</item>
        <item>[t]Førstehjelp</item>
        <item>[h]Annet</item>
        <item>[t]Logg ut</item>
    </string-array>
    <string-array name="wiki_Symptomer_options">
        <item>Feber symptomer</item>
        <item>Smerte</item>
        <item>Kvalme</item>
        <item>Annet</item>
    </string-array>
    <string-array name="patients_list">
        <item>Per Persen</item>
        <item>Stian Stiansen</item>
        <item>Daniel Danielsen</item>
        <item>Tom Tomsen</item>
        <item>Hans Hansen</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="exercises">Vis alle øvelser</string>
    <string name="myPatients">Mine pasienter:</string>
    <string name="exercise1">Armer opp</string>
    <string name="exercise2">Armer ned</string>
    <string name="exercise3">På huk</string>
    <string name="exercise4">På hodet</string>
    <string name="choose_exercise">Velg øvelse:</string>
    <string name="title_activity_wiki_fragment">WikiFragment</string>
    <string name="title_activity_article_fragment">ArticleFragment</string>
    <string name="title">Tittel</string>
    <string name="gibberish">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</string>
    <string name="user_name">Bruker:</string>
    <string name="user_status">Status:</string>
    <string name="user_achievements">Prestasjoner:</string>
    <string name="home_button_achievements">Prestasjoner</string>
   	<string name="home_button_training">Opplæring</string>
   	<string name="home_button_practise">Praksis</string>
    <string name="user_unlocked_cases">Ulåste case:</string>
    <string name="user_locked_cases">Låste case:</string>
    <string name="user_status_beginner">Nybegynner</string>
    <string name="user_status_experienced">Erfaren</string>
    <string name="user_status_expert">Ekspert</string>
    <string name="training_details">Opplæringsdetaljer</string>
    <string name="user_case_medals">Medalje:</string>
    <string name="user_case_name">Case:</string>
    <string name="user_case_scores">Poengsum:</string>
    <string name="register">Registrer</string>
    <string name="home_info">Statistikk for opplæringsdel</string>
    <string name="home_cases_level">Nivå:</string>
    <string name="home_cases_houses_completed">Hus klart:</string>
    <string name="home_cases_houses_notCompleted">Hus ikke klart:</string>
    <string name="home_cases_unlocked_cases">Ulåste case:</string>
    <string name="home_cases_locked_cases">Låste case:</string>
    <string name="home_cases_total_score">Total poengsum:</string>
    <string name="home_cases_number_of_achievements">Prestasjoner:</string>
    <string name="home_cases_medal">Medalje</string>
    <string name="home_cases_name">Case</string>
    <string name="home_cases_score">Poengsum</string>
    <string name="home_button_back">Tilbake</string>
    <string name="home_unlocked_levels">Ulåste nivå:</string>
    <string name="home_locked_levels">Låste nivå:</string>
    <string name="home_level_name">Nivå</string>
    <string name="home_level_score">Poengsum</string>
    <string name="home_cases_achievements">Prestasjoner</string>
    <string name="addButton">Ny Pasient</string>
    <string name="save">Lagre</string>
    
    <string name="fillText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</string>
    <string name="delete">Slett</string>
    <string name="skip">Hopp over</string>
    <string name="signIn">Logg inn</string>
    <string name="password">Passord</string>
    <string name="email">Epost</string>
    <string name="loggInn">Logger inn...</string>
    <string name="newContent">Nytt innhold lastes ned...</string>
    <string name="registering">Registrerer</string>
    
</resources>
