<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeMainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.TestFragmentHome" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="101dp"
            android:layout_height="101dp"
            android:src="@drawable/profilbilde" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/homeUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/articleText"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/user_status"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/homeStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/user_achievements"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/homeAchievement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >

        <TextView
            android:id="@+id/homeCasesUnlockedCases"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/home_unlocked_levels"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/homeUnlockedLevels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >

        <TextView
            android:id="@+id/homeCasesLockedCases"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/home_locked_levels"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/homeLockedLevels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_level_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/home_level_score" />

    </TableRow>

    <ListView
        android:id="@+id/homeListLevel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.54" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:weightSum="10" >

        <Button
            android:id="@+id/homeButtonTraining"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="5"
            android:text="Opplæring" />

        <Button
            android:id="@+id/homeButtonPractise"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="5"
            android:text="Praksis" />
    </LinearLayout>

</LinearLayout>