<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >
   	 
   	    <TextView
   	    	android:id="@+id/textView5"
	        android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
	        android:text="@string/choose_exercise"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
   	     
   	 </LinearLayout>
   	 
   	 <LinearLayout
   	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal" >
   	    
   	    <LinearLayout
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:layout_margin="8dp"
   	        android:orientation="vertical" >
        	
   	        <ImageButton
       			android:id="@+id/imageButton1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:src="@drawable/exercise1" />
   	        
   	         <TextView
		        android:id="@+id/text1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/exercise1"
        		android:textAppearance="?android:attr/textAppearanceMedium" />
   	         
   	    </LinearLayout>
   	    
   	    <LinearLayout
   	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="8dp"
        	android:orientation="vertical" >
        	
   	        <ImageButton
       			android:id="@+id/imageButton2"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:src="@drawable/exercise2" />
   	        
   	         <TextView
		        android:id="@+id/text2"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/exercise2"
        		android:textAppearance="?android:attr/textAppearanceMedium" />
   	         
   	    </LinearLayout>
   	     
  		
   	 </LinearLayout>
    
   	 <LinearLayout
   	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal" >
   	    
   	    <LinearLayout
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:layout_margin="8dp"
   	        android:orientation="vertical" >
        	
   	        <ImageButton
       			android:id="@+id/imageButton3"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:src="@drawable/exercise3" />
   	        
   	         <TextView
		        android:id="@+id/text3"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/exercise3"
        		android:textAppearance="?android:attr/textAppearanceMedium" />
   	         
   	    </LinearLayout>
   	    
   	    <LinearLayout
   	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="8dp"
        	android:orientation="vertical" >
        	
   	        <ImageButton
       			android:id="@+id/imageButton4"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:src="@drawable/exercise4" />
   	        
   	         <TextView
		        android:id="@+id/text4"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/exercise4"
        		android:textAppearance="?android:attr/textAppearanceMedium" />
   	         
   	    </LinearLayout>
   	     
  		
   	 </LinearLayout>

<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/imageButton1"
        android:src="@drawable/exercise2" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignTop="@+id/imageButton3"
        android:src="@drawable/exercise4" />

    <TextView
        android:id="@+id/articleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_below="@+id/imageButton2"
        android:text="@string/exercise1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/articleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_below="@+id/imageButton2"
        android:text="@string/exercise2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/articleTitle"
        android:layout_centerVertical="true"
        android:src="@drawable/exercise3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/imageButton4"
        android:text="@string/exercise4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_below="@+id/imageButton3"
        android:text="@string/exercise3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="33dp"
        android:src="@drawable/exercise1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton1"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_exercise"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
-->
</LinearLayout>